Fix hugo installation in CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
             apk add wget
             wget -q https://github.com/gohugoio/hugo/releases/download/v0.63.2/hugo_extended_0.63.2_Linux-64bit.tar.gz
             apk add tar
-            tar xzf hugo_0.63.2_Linux-64bit.tar.gz
+            tar xzf hugo_extended_0.63.2_Linux-64bit.tar.gz
             chmod a+x hugo
             mv hugo /usr/local/bin/hugo
 
